# stock_midas_v2

./: .gitignore
backend/: API.md  README.md  pyproject.toml
backend/app/: __init__.py  database.py  dependencies.py  main.py  runtime_config.py  schemas.py  signals.py  timeutils.py
backend/app/repositories/: __init__.py  data_sync.py  market.py  news.py  notifications.py  portfolio.py  reports.py  screener.py  search.py  settings.py  utils.py  watchlists.py
backend/app/routers/: __init__.py  data_sync.py  health.py  market.py  news.py  notifications.py  portfolio.py  reports.py  screener.py  search.py  settings.py  watchlists.py
backend/app/services/: __init__.py  akshare_sync.py  market_data.py
backend/data/: midas.sqlite3
backend/tests/: conftest.py  test_api.py
docs/superpowers/plans/: 2026-04-22-backend-api.md  2026-04-22-settings-backend-integration.md
docs/superpowers/specs/: 2026-04-22-settings-backend-integration-design.md
frontend/: README.md  metadata.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Portfolio.tsx  Reports.tsx  Screener.tsx  Settings.tsx  Watchlist.tsx
src/: types.ts
src/components/: Layout.tsx
src/pages/: Dashboard.tsx  Portfolio.tsx  Reports.tsx  Screener.tsx  Settings.tsx  Watchlist.tsx
