[project]
name = "midas-backend"
version = "0.1.0"
description = "FastAPI backend for the Midas stock research terminal."
requires-python = ">=3.12"
dependencies = [
  "akshare>=1.18.53",
  "fastapi>=0.135.1",
  "pydantic>=2.12.5",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.0",
]
